--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
     "clsx": "^2.1.1",
     "lucide-react": "^0.543.0",
     "mongoose": "^8.18.1",
+    "motion": "^12.23.12",
     "next": "15.5.2",
     "next-auth": "^4.24.11",
     "postcss": "^8.5.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "simplex-noise": "^4.0.3",
     "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
