--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "lucide-react": "^0.543.0",
     "mongoose": "^8.18.1",
     "motion": "^12.23.12",
-    "next": "15.5.2",
+    "next": "^15.5.7",
     "next-auth": "^4.24.11",
     "postcss": "^8.5.6",
     "react": "19.1.0",
