--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-hook-form": "^7.66.1",
     "simplex-noise": "^4.0.3",
     "tailwind-merge": "^3.3.1",
+    "twilio": "^5.12.0",
     "zod": "^4.1.12"
   },
   "devDependencies": {
