--- a/package.json
+++ b/package.json
@@ -9,15 +9,14 @@
   },
   "dependencies": {
     "@google-cloud/storage": "^7.18.0",
-    "@google/genai": "^1.28.0",
     "@hookform/resolvers": "^5.2.2",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-slot": "^1.2.3",
     "@vercel/functions": "^3.1.0",
-    "aws-sdk": "^2.1692.0",
     "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "isomorphic-dompurify": "^2.35.0",
     "lucide-react": "^0.543.0",
     "mongoose": "^8.18.1",
     "motion": "^12.23.12",
@@ -27,7 +26,6 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.66.1",
-    "simplex-noise": "^4.0.3",
     "tailwind-merge": "^3.3.1",
     "twilio": "^5.12.0",
     "zod": "^4.1.12"
