--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.543.0",
+    "mongodb": "^7.0.0",
     "mongoose": "^8.18.1",
     "motion": "^12.23.12",
     "next": "^15.5.7",
@@ -25,7 +26,7 @@
     "postcss": "^8.5.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "react-hook-form": "^7.66.1",
+    "react-hook-form": "^7.71.1",
     "simplex-noise": "^4.0.3",
     "tailwind-merge": "^3.3.1",
     "zod": "^4.1.12"
