--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "simplex-noise": "^4.0.3",
     "tailwind-merge": "^3.3.1",
     "twilio": "^5.12.0",
+    "vercel": "^50.10.2",
     "zod": "^4.1.12"
   },
   "devDependencies": {
