--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "flags": "^4.0.3",
     "isomorphic-dompurify": "^2.35.0",
     "lucide-react": "^0.543.0",
     "mongodb": "^7.0.0",
