--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-dom": "19.1.0",
     "react-hook-form": "^7.71.1",
     "react-markdown": "^10.1.0",
+    "recharts": "^3.7.0",
     "remark-gfm": "^4.0.1",
     "simplex-noise": "^4.0.3",
     "tailwind-merge": "^3.3.1",
