--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "motion": "^12.23.12",
     "next": "^15.5.7",
     "next-auth": "^4.24.11",
+    "nodemailer": "^7.0.13",
     "postcss": "^8.5.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
@@ -44,6 +45,7 @@
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.13",
     "@types/node": "^20",
+    "@types/nodemailer": "^7.0.11",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "9.39.3",
